# rasa_reminderbot

./: .gitignore  README.md  domain.yml  pyproject.toml  rasa_x_playbook.yml
.github/workflows/: action-custom-server.yaml  action_server.yml
actions/: actions.py
data/: nlu.yml  rules.yml
